--- a/gradle.properties
+++ b/gradle.properties
@@ -3,15 +3,11 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.3
-	yarn_mappings=1.16.3+build.17
-	loader_version=0.10.0+build.208
+	minecraft_version=1.16
+	yarn_mappings=1.16+build.4
+	loader_version=0.7.4+build.177
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
-
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.22.0+build.408-1.16
+	maven_group = com.github.NeRdTheNed
+	archives_base_name = Punch2Prime
