--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,21 @@ plugins {
 	id 'maven-publish'
 }
 
-// This ensures that the project is built to the specified Java version
+// Defines a Java 8 compatible JDK.
+def compiler = javaToolchains.compilerFor {
+	languageVersion = JavaLanguageVersion.of(8)
+}
+
+// Tells Gradle to use the previously defined Java 8 compatible JDK.
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(8)
+		compiler
 	}
+}
+
+// Tells Gradle to always compile with the previously defined Java 8 compatible JDK.
+tasks.withType(JavaCompile).configureEach {
+	javaCompiler = compiler
 }
 
 archivesBaseName = project.archives_base_name
@@ -27,15 +37,10 @@ import groovy.json.JsonOutput
 processResources {
 	inputs.property "version", project.version
 
-	from(sourceSets.main.resources.srcDirs) {
-		include "fabric.mod.json"
+	filesMatching("fabric.mod.json") {
 		expand "version": project.version
 	}
 
-	from(sourceSets.main.resources.srcDirs) {
-		exclude "fabric.mod.json"
-	}
-	
 	// Minifies all .json files when building the mod.
 	// The source files are not minified, only the files in the resulting .jar.
 	// This both helps in reducing the size of the built .jar, and verifies that your .json files are valid each time you build.
@@ -66,16 +71,17 @@ tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
-task sourcesJar(type: Jar, dependsOn: classes) {
-	classifier = "sources"
-	from sourceSets.main.allSource
+java {
+	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
+	// if it is present.
+	// If you remove this line, sources will not be generated.
+	withSourcesJar()
 }
 
 jar {
-	from "LICENSE"
+	from("LICENSE") {
+		rename { "${it}_${project.archivesBaseName}"}
+	}
 }
 
 // configure the maven publication
