--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -1,13 +1,15 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: fabric-1.16 - Snapshot
+name: fabric-1.16 - Draft release
 
 on:
   push:
-    branches: fabric-1.16
-  pull_request:
-    branches: fabric-1.16
+    # Sequence of patterns matched against refs/tags
+    tags:
+    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches:
+      - fabric-1.16 # Match only this branch
 
 jobs:
   build:
@@ -40,7 +42,19 @@ jobs:
       run: strip-nondeterminism build/libs/*.jar
     - name: Run advzip (-i 999) on built .jar files
       run: advzip --shrink-insane -kzi 999 -p build/libs/*.jar
-    - uses: actions/upload-artifact@v2
+    - name: Draft release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: Package
-        path: build/libs
+        tag_name: ${{ github.ref }}
+        release_name: Draft release ${{ github.ref }}
+        body: Replace this text with the description of this release!
+        draft: true
+        prerelease: false
+    - name: Upload draft release assets
+      uses: shogo82148/actions-upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: build/libs/*.jar
