This might actually fix GitHub actions?
I'm not good at this

--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -6,10 +6,8 @@ name: fabric-1.16 - Draft release
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    branches:
-    - fabric-1.16 # Match only this branch
-      tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    branches: fabric-1.16 # Match only this branch
+      tags: 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
