--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -6,8 +6,7 @@ name: fabric-1.16 - Draft release
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    branches: fabric-1.16 # Match only this branch
-      tags: 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+    tags: 'v*-1.16' # Push events to matching v*-1.16
 
 jobs:
   build:
