--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,41 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version + "-" + project.minecraft_version
 group = project.maven_group
 
+repositories {
+	mavenCentral()
+	jcenter()
+	maven {
+		name = 'Fabric'
+		url = 'http://maven.fabricmc.net/'
+	}
+	maven {
+		name = 'SpongePowered'
+		url = 'http://repo.spongepowered.org/maven'
+	}
+	maven {
+		name = 'mojang'
+		url = 'https://libraries.minecraft.net/'
+	}
+	maven {
+		name = 'legacy-fabric'
+		url = 'https://dl.bintray.com/legacy-fabric/Legacy-Fabric-Maven'
+	}
+}
+
+minecraft {
+	intermediaryUrl = {
+		return "https://dl.bintray.com/legacy-fabric/Legacy-Fabric-Maven/net/fabricmc/intermediary/" + it + "/intermediary-" + it + "-v2.jar";
+	}
+}
+
 dependencies {
 	//to change the versions see the gradle.properties file
+	implementation "com.google.guava:guava:23.5-jre"
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+	modImplementation ("net.fabricmc:fabric-loader-1.8.9:${project.loader_version}") {
+		exclude module: "guava"
+	}
 }
 
 import groovy.json.JsonSlurper
