--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16
-	yarn_mappings=1.16+build.4
-	loader_version=0.7.4+build.177
+	minecraft_version = 1.8.9
+	yarn_mappings = 1.8.9+build.202011050955
+	loader_version = 0.9.3+build.202009100647
 
 # Mod Properties
 	mod_version = 1.0.1
