--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/use
-	minecraft_version=1.16
-	yarn_mappings=1.16+build.4
-	loader_version=0.7.4+build.177
+	minecraft_version=1.17
+	yarn_mappings=1.17+build.13
+	loader_version=0.11.2
 
 # Mod Properties
 	mod_version = 1.0.1
