--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,21 @@
+buildscript {
+	repositories {
+		mavenCentral()
+		google()
+	}
+	dependencies {
+		// FIXME ProGuard 7.1.1 is bugged.
+		// Java 16 class files are marked as using experimental features even when they're not.
+		// For some reason, this doesn't seem to phase the Fabric loader?
+		// Replace with a newer version as soon as it releases.
+		classpath 'com.guardsquare:proguard-gradle:7.1.1'
+	}
+}
+
 plugins {
-	id 'fabric-loom' version '0.9-SNAPSHOT'
+	// TODO This buildscript currently depends on some implementation details of Loom due to dumb ProGuard stuff
+	// The version of Loom used will probably be able to be updated without any issues.
+	id 'fabric-loom' version '0.9.46'
 	id 'maven-publish'
 }
 
@@ -71,12 +87,57 @@ tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
 }
 
+// This task creates a .jar file containing a deobfuscated version of this mod, for ProGuard to minimise.
+task unmappedJar(type: Jar) {
+	classifier = "unmapped"
+	from sourceSets.main.output
+}
+
+// TODO depends on loom implementation details I don't understand
+task ('proguard', type: proguard.gradle.ProGuardTask) {
+	dependsOn "unmappedJar"
+	verbose
+
+	target "16"
+
+	// Workaround for ProGuard seemingly not recognising when the output .jar file doesn't exist
+	outputs.upToDateWhen { false }
+
+	injars "build/libs/" + archivesBaseName + "-" + version + "-unmapped.jar"
+	outjars "build/libs/" + archivesBaseName + "-" + version + "-dev" + ".jar"
+
+	// Get the Java standard library from the provided toolchain.
+	libraryjars compiler.get().metadata.installationPath.asFile.absolutePath + "/jmods/java.base.jmod", jarfilter: '!**.jar', filter: '!module-info.class'
+
+	// Add relevant Minecraft libraries to ProGuard's list of libraries to obfuscate against.
+	// TODO this is very janky
+	//libraryjars project.configurations.compileClasspath
+	libraryjars project.configurations.minecraftNamed
+
+	// The rest of the configs are in this file
+	configuration 'guard.pro'
+}
+
+artifacts.add('archives', file(proguard.outputs.files.singleFile)) {
+	type('jar')
+	builtBy(proguard)
+}
+
 java {
 	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
 	// if it is present.
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
+
+// TODO depends on loom implementation details I don't understand
+remapJar {
+	dependsOn(proguard)
+	input.fileValue(proguard.outputs.files.singleFile)
+	//archiveClassifier.set("proguard")
+}
+
+build.finalizedBy(cleanUnmappedJar)
 
 // configure the maven publication
 publishing {
