Rezip built .jar files to remove directory entries
When Loom remaps a .jar file, it adds empty directory entries to it. This increases the size of the .jar file by a small amount, so I wrote a bash script to re-zip the .jar files before they get further processed by GitHub Actions.

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -36,6 +36,8 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Rezip mod .jar files to remove directory entries
+      run: bash removeDirectoryEntries.sh
     - name: Run strip-nondeterminism on built .jar files
       run: strip-nondeterminism build/libs/*.jar
     - name: Run advzip (-i 999) on built .jar files
