--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,14 @@ buildscript {
 	}
 	dependencies {
 		// FIXME Replace with a newer version as soon as it releases.
-		classpath 'com.guardsquare:proguard-gradle:7.2.0-beta2'
+		classpath 'com.guardsquare:proguard-gradle:7.3.2'
 	}
 }
 
 plugins {
 	// TODO This buildscript currently depends on some implementation details of Loom due to dumb ProGuard stuff
 	// The version of Loom used will probably be able to be updated without any issues.
-	id 'fabric-loom' version '0.10.64'
+	id 'fabric-loom' version '1.0-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -86,7 +86,7 @@ tasks.withType(JavaCompile) {
 
 // This task creates a .jar file containing a deobfuscated version of this mod, for ProGuard to minimise.
 task unmappedJar(type: Jar) {
-	classifier = "unmapped"
+	archiveClassifier = "unmapped"
 	from sourceSets.main.output
 }
 
@@ -108,8 +108,7 @@ task ('proguard', type: proguard.gradle.ProGuardTask) {
 
 	// Add relevant Minecraft libraries to ProGuard's list of libraries to obfuscate against.
 	// TODO this is very janky
-	//libraryjars project.configurations.compileClasspath
-	libraryjars project.configurations.minecraftNamed
+	libraryjars project.configurations.compileClasspath
 
 	// The rest of the configs are in this file
 	configuration 'guard.pro'
