--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 org.gradle.jvmargs=-Xmx2G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
+	# check these on https://grayray75.github.io/LegacyFabric-Versions/
 	minecraft_version = 1.8.9
-	yarn_mappings = 1.8.9+build.202203281833
-	loader_version = 0.13.3
+	yarn_mappings = 1.8.9+build.458
+	loader_version = 0.14.19
 
 # Mod Properties
 	mod_version = 1.0.1
