--- a/gradle.properties
+++ b/gradle.properties
@@ -2,9 +2,9 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.19
-	yarn_mappings=1.19+build.4
+	# check these on https://fabricmc.net/develop/
+	minecraft_version=23w14a
+	yarn_mappings=23w14a+build.6
 	loader_version=0.11.7
 
 # Mod Properties
