--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -38,6 +38,20 @@ jobs:
       run: strip-nondeterminism build/libs/*.jar
     - name: Run advzip (-i 99999) on built .jar files
       run: advzip --shrink-insane -kzi 99999 -p build/libs/*.jar
+    - name: Run ECT on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-9) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -9 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-99) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -99 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-999) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -999 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-30060) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -30060 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-90032) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -90032 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-9999) on built .jar files
+      run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -9999 --disable-png --disable-jpg -strip -zip $file; done
     - name: Draft release
       uses: softprops/action-gh-release@v1
       with:
