--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop/
-	minecraft_version=1.20-pre7
-	yarn_mappings=1.20-pre7+build.2
+	minecraft_version=1.20-rc1
+	yarn_mappings=1.20-rc1+build.2
 	loader_version=0.14.19
 
 # Mod Properties
