--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -1,12 +1,12 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: fabric-1.20 - Draft release
+name: forge-1.12.2 - Draft release
 
 on:
   push:
     # Sequence of patterns matched against refs/tags
-    tags: 'v*-1.20' # Push events to matching v*-1.20
+    tags: 'v*-1.12.2.forge' # Push events to matching v*-1.12.2.forge
 
 jobs:
   build:
@@ -15,11 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
-        java-version: 17
+        java-version: 8
     - name: Install advancecomp
       run: sudo apt-get install advancecomp
     - name: Install strip-nondeterminism
