--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,13 +1,13 @@
 # This workflow will build a Java project with Gradle
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-gradle
 
-name: fabric-1.20 - Snapshot
+name: forge-1.12.2 - Snapshot
 
 on:
   push:
-    branches: fabric-1.20
+    branches: forge-1.12.2
   pull_request:
-    branches: fabric-1.20
+    branches: forge-1.12.2
 
 jobs:
   build:
@@ -16,11 +16,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
         distribution: 'zulu'
-        java-version: 17
+        java-version: 8
     - name: Install advancecomp
       run: sudo apt-get install advancecomp
     - name: Install strip-nondeterminism
@@ -31,7 +31,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
       with:
         gradle-version: wrapper
-        cache-read-only: ${{ github.ref != 'refs/heads/fabric-1.20' }}
+        cache-read-only: ${{ github.ref != 'refs/heads/forge-1.12.2' }}
         arguments: build --stacktrace --warning-mode all
     - name: Rezip mod .jar files to remove directory entries
       run: bash removeDirectoryEntries.sh
