--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/develop/
-	minecraft_version=1.20-rc1
-	yarn_mappings=1.20-rc1+build.2
-	loader_version=0.14.19
+# Forge Properties
+	forge_version=1.12.2-14.23.5.2860
+	mcp_channel=stable
+	mcp_version=39-1.12
+	minecraft_version=1.12.2
 
 # Mod Properties
 	mod_version = 1.0.2
