--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,6 +37,8 @@ jobs:
       run: bash removeDirectoryEntries.sh
     - name: Run strip-nondeterminism on built .jar files
       run: strip-nondeterminism build/libs/*.jar
+    - name: Move shadow jar to temp folder
+      run: mkdir -p tempbuild && mv build/libs/*-with-mixins.jar tempbuild/
     - name: Run advzip (-i 999) on built .jar files
       run: advzip --shrink-insane -kzi 999 -p build/libs/*.jar
     - name: Run ECT on built .jar files
@@ -49,6 +51,14 @@ jobs:
       run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -30060 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run ECT (-90032) on built .jar files
       run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -90032 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run advzip on shadow jar file
+      run: advzip --shrink-extra -kzp tempbuild/*.jar
+    - name: Run ECT on shadow jar file
+      run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-9) on shadow jar file
+      run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -9 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Move shadow jar to main folder
+      run: mv tempbuild/*.jar build/libs/
     - uses: actions/upload-artifact@v3
       with:
         name: Package
