--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -58,12 +58,16 @@ jobs:
       run: for file in ./build/libs/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -9999 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run advzip on shadow jar file
       run: advzip --shrink-extra -kzp tempbuild/*.jar
+    - name: Run advzip (-i 1) on shadow jar file
+      run: advzip --shrink-insane -kzi 1 -p tempbuild/*.jar
     - name: Run ECT on shadow jar file
       run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run ECT (-9) on shadow jar file
       run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -9 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run ECT (-99) on shadow jar file
       run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -99 --disable-png --disable-jpg -strip -zip $file; done
+    - name: Run ECT (-999) on shadow jar file
+      run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -999 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run ECT (-30060) on shadow jar file
       run: for file in ./tempbuild/*.jar; do ./ci-tools/ect-ubuntu-x86-64 -30060 --disable-png --disable-jpg -strip -zip $file; done
     - name: Run ECT (-90032) on shadow jar file
