--- a/.github/workflows/draftrelease.yml
+++ b/.github/workflows/draftrelease.yml
@@ -26,6 +26,8 @@ jobs:
       run: sudo apt-get install strip-nondeterminism
     - name: Install jq
       run: sudo apt-get install jq
+    - name: Validate Gradle wrapper
+      uses: gradle/wrapper-validation-action@v1
     - name: Build with Gradle
       env:
         BUILD_RELEASE: ${{ github.event.release.prerelease == false }}
